--- a/index.html
+++ b/index.html
@@ -1,54 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Pierrick Calvez Portfolio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.4.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Domaine+Display:wght@300&family=Apercu:wght@300;500&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Apercu', sans-serif; color: #333; }
-    h1 { font-family: 'Domaine Display', serif; font-weight: 300; font-size: 3rem; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Guy Van Oers – Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-  <div class="container">
-    <a class="navbar-brand" href="#">P. Calvez</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div id="navMenu" class="collapse navbar-collapse">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-      </ul>
+<!-- Navbar -->
+<header class="border-bottom bg-white py-3">
+  <div class="container d-flex justify-content-between align-items-center">
+    <div class="fw-bold">Guy Van Oers</div>
+    <a href="#contact" class="text-decoration-none text-dark">Contact</a>
+  </div>
+</header>
+
+<!-- Hero Section -->
+<div class="container py-5">
+  <div class="row">
+    <div class="col-12">
+      <img src="assets/hero.jpg" alt="Pastorales" class="img-fluid w-100 mb-3">
+    </div>
+    <div class="container hero-info">
+    <div class="row">
+    <div class="col-lg-6 offset-lg-6 text-end">
+      <h2 class="hero-title">Pastorales, 2024</h2>
+      <p class="hero-subtext">Acrylic Paint on Linen Canvas</p>
+      <p class="hero-subtext">90 x 120 x 4 cm, 35½ x 47¼ x 1½ in</p>
+    </div>
+    </div>
     </div>
   </div>
-</nav>
+</div>
+<!-- About Section -->
+<div class="about-text mx-auto px-2 px-lg-5" style="max-width: 1200px;">
+  <h3 class="about-title">About/</h3>
+  <p>
+    Guy Van Oers is a self-taught artist whose abstract paintings are driven by emotion and intuition. 
+    Working mainly with acrylic on canvas, he creates dynamic compositions full of movement, texture, 
+    and layered color. His work explores themes like motion, disruption, and reduced reality—inviting 
+    viewers to feel rather than interpret.
+  </p>
+</div>
 
-<section id="portfolio" class="container mb-5">
-  <h1 class="mb-4">Portfolio</h1>
+<!-- Gallery Section -->
+<div class="container py-5" id="gallery">
+  <div class="row justify-content-center mb-4">
+    <div class="col-lg-6 text-center">
+      <h3 class="section-title">Gallery</h3>
+    </div>
+  </div>
   <div class="row g-4">
-    <div class="col-md-6">
-      <div class="card">
-        <img src="placeholder-pastorales.jpg" class="card-img-top" alt="Pastorales">
-        <div class="card-body">
-          <h5 class="card-title">Pastorales</h5>
+    <!-- Artwork 1 -->
+    <div class="col-sm-6 col-lg-4">
+      <div class="card border-0 shadow-sm h-100">
+        <img src="assets/artwork1.jpg" class="card-img-top" alt="Artwork 1">
+        <div class="card-body text-center">
+          <h5 class="card-title">Disturbed Movement</h5>
+          <p class="text-muted small">Acrylic on Canvas<br>60 x 73 cm</p>
         </div>
       </div>
     </div>
-    <!-- Herhaal voor andere series: The Dinner, Ueno Wharf, Ylin–Ylan … -->
+
+    <!-- Artwork 2 -->
+    <div class="col-sm-6 col-lg-4">
+      <div class="card border-0 shadow-sm h-100">
+        <img src="assets/artwork2.jpg" class="card-img-top" alt="Artwork 2">
+        <div class="card-body text-center">
+          <h5 class="card-title">Reduced Reality</h5>
+          <p class="text-muted small">Acrylic on Canvas<br>70 x 90 cm</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Artwork 3 -->
+    <div class="col-sm-6 col-lg-4">
+      <div class="card border-0 shadow-sm h-100">
+        <img src="assets/artwork3.jpg" class="card-img-top" alt="Artwork 3">
+        <div class="card-body text-center">
+          <h5 class="card-title">Untitled</h5>
+          <p class="text-muted small">Acrylic on Linen<br>80 x 100 cm</p>
+        </div>
+      </div>
+    </div>
   </div>
-</section>
+</div>
 
-<section id="contact" class="container mb-5">
-  <h2>Contact</h2>
-  <p>Stuurt een bericht naar: <a href="mailto:studio@pierrickcalvez.com">studio@pierrickcalvez.com</a></p>
-  <p>Instagram: <a href="https://instagram.com/pierrickcalvez" target="_blank">@pierrickcalvez</a></p>
-</section>
+<!-- Contact Section -->
+<div class="container py-5" id="contact">
+  <div class="row justify-content-center">
+    <div class="col-lg-6 text-center">
+      <h3 class="section-title">Contact</h3>
+      <p><strong>Instagram:</strong> <a href="https://www.instagram.com/guyvanoers/" target="_blank">@guyvanoers</a></p>
+      <p><strong>Email:</strong> <a href="mailto:email@example.com">email@example.com</a></p>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.4.3/dist/js/bootstrap.bundle.min.js"></script>
+    </div>
+  </div>
+</div>
+<footer class="text-center text-muted py-4 mt-5">
+  <p class="mb-0">© Guy Van Oers, 2024</p>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
