--- a/index.html
+++ b/index.html
@@ -21,87 +21,52 @@
 <div class="container py-5">
   <div class="row">
     <div class="col-12">
-      <img src="assets/hero.jpg" alt="Pastorales" class="img-fluid w-100 mb-3">
+      <img src="assets/artwork_1.jpg" alt="Pastorales" class="img-fluid w-100 mb-3">
     </div>
     <div class="container hero-info">
     <div class="row">
     <div class="col-lg-6 offset-lg-6 text-end">
-      <h2 class="hero-title">Pastorales, 2024</h2>
-      <p class="hero-subtext">Acrylic Paint on Linen Canvas</p>
-      <p class="hero-subtext">90 x 120 x 4 cm, 35½ x 47¼ x 1½ in</p>
+      <h2 class="hero-title">Disturbed Movemen, 2023</h2>
+      <p class="hero-subtext">Acrylic on canvas - Signed and dated on the back</p>
+      <p class="hero-subtext">59,5 x 72,5 cm</p>
     </div>
+    </div>
+    </div>
+    <!--About section-->
+    <div class="row">
+    <div class="col-lg-6 offset-lg-6">
+      <h3 class="about-title" style="font-size: 1rem; font-weight: 500;">About /</h3>
+      <p style="font-size: 0.9rem; line-height: 1.6;">
+          Guy Van Oers is a self-taught artist whose abstract paintings are driven by emotion and intuition. 
+          Working mainly with acrylic on canvas, he creates dynamic compositions full of movement, texture, 
+          and layered color. His work explores themes like motion, disruption, and reduced reality—inviting 
+          viewers to feel rather than interpret.
+        </p>
     </div>
     </div>
   </div>
-</div>
-<!-- About Section -->
-<div class="about-text mx-auto px-2 px-lg-5" style="max-width: 1200px;">
-  <h3 class="about-title">About/</h3>
-  <p>
-    Guy Van Oers is a self-taught artist whose abstract paintings are driven by emotion and intuition. 
-    Working mainly with acrylic on canvas, he creates dynamic compositions full of movement, texture, 
-    and layered color. His work explores themes like motion, disruption, and reduced reality—inviting 
-    viewers to feel rather than interpret.
-  </p>
-</div>
-
-<!-- Gallery Section -->
-<div class="container py-5" id="gallery">
-  <div class="row justify-content-center mb-4">
-    <div class="col-lg-6 text-center">
-      <h3 class="section-title">Gallery</h3>
-    </div>
+ <!-- Gallery Section -->
+<div class="container-fluid px-0 gallery">
+  <div class="gallery-column">
+    <img src="assets/artwork_2.jpg" alt="Artwork 1">
+    <img src="assets/artwork_3.jpg" alt="Artwork 3">
   </div>
-  <div class="row g-4">
-    <!-- Artwork 1 -->
-    <div class="col-sm-6 col-lg-4">
-      <div class="card border-0 shadow-sm h-100">
-        <img src="assets/artwork1.jpg" class="card-img-top" alt="Artwork 1">
-        <div class="card-body text-center">
-          <h5 class="card-title">Disturbed Movement</h5>
-          <p class="text-muted small">Acrylic on Canvas<br>60 x 73 cm</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Artwork 2 -->
-    <div class="col-sm-6 col-lg-4">
-      <div class="card border-0 shadow-sm h-100">
-        <img src="assets/artwork2.jpg" class="card-img-top" alt="Artwork 2">
-        <div class="card-body text-center">
-          <h5 class="card-title">Reduced Reality</h5>
-          <p class="text-muted small">Acrylic on Canvas<br>70 x 90 cm</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Artwork 3 -->
-    <div class="col-sm-6 col-lg-4">
-      <div class="card border-0 shadow-sm h-100">
-        <img src="assets/artwork3.jpg" class="card-img-top" alt="Artwork 3">
-        <div class="card-body text-center">
-          <h5 class="card-title">Untitled</h5>
-          <p class="text-muted small">Acrylic on Linen<br>80 x 100 cm</p>
-        </div>
-      </div>
-    </div>
+  <div class="gallery-column">
+    <img src="assets/artwork_3.jpg" alt="Artwork 2">
+    <img src="assets/artwork_2.jpg" alt="Artwork 2">
   </div>
 </div>
-
-<!-- Contact Section -->
-<div class="container py-5" id="contact">
-  <div class="row justify-content-center">
-    <div class="col-lg-6 text-center">
-      <h3 class="section-title">Contact</h3>
-      <p><strong>Instagram:</strong> <a href="https://www.instagram.com/guyvanoers/" target="_blank">@guyvanoers</a></p>
-      <p><strong>Email:</strong> <a href="mailto:email@example.com">email@example.com</a></p>
-
+<!-- Footer -->
+<footer class="footer-bar">
+  <div class="container-fluid px-4 px-lg-5">
+    <div class="d-flex justify-content-between align-items-center flex-wrap small">
+      <div>© Guy Van Oers</div>
+      <div><a href="https://www.instagram.com/guyvanoers/" target="_blank" class="footer-link">@guyvanoers</a></div>
+      <div><a href="mailto:email@example.com" class="footer-link">email@example.com</a></div>
     </div>
   </div>
-</div>
-<footer class="text-center text-muted py-4 mt-5">
-  <p class="mb-0">© Guy Van Oers, 2024</p>
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
