--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,8 @@
 <!-- Navbar -->
 <header class="border-bottom bg-white py-3">
   <div class="container d-flex justify-content-between align-items-center">
-    <div class="fw-bold">Guy Van Oers</div>
+    <li><a href="index.html" class="text-decoration-none text-dark fw-bold">Guy Van Oers</a></li>
     <li><a href="contact.html" class="text-decoration-none text-dark">Contact</a></li>
-
   </div>
 </header>
 <!-- Contact Page -->
