--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <!-- Navbar -->
 <header class="border-bottom bg-white py-3">
   <div class="container d-flex justify-content-between align-items-center">
-    <div class="fw-bold">Guy Van Oers</div>
-    <a href="#contact" class="text-decoration-none text-dark">Contact</a>
+    <li><a href="index.html" class="text-decoration-none text-dark fw-bold">Guy Van Oers</a></li>
+    <li><a href="contact.html" class="text-decoration-none text-dark">Contact</a></li>
   </div>
 </header>
 
