--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Guy Van Oers – Portfolio</title>
+  <title>Guy Van Oers – Contact</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -11,47 +11,48 @@
 
 <!-- Navbar -->
 <header class="border-bottom bg-white py-3">
-  <div class="container d-flex justify-content-between align-items-center">
-    <li><a href="index.html" class="text-decoration-none text-dark fw-bold">Guy Van Oers</a></li>
-    <li><a href="contact.html" class="text-decoration-none text-dark">Contact</a></li>
+  <div class="container-asym d-flex justify-content-between align-items-center">
+    <a href="index.html" class="text-decoration-none text-dark fw-bold">Guy Van Oers</a>
+    <a href="contact.html" class="text-decoration-none text-dark">Contact</a>
   </div>
 </header>
-<!-- Contact Page -->
-<div class="container py-5">
-  <div class="row">
-    <div class="col-12">
-      <img src="assets/atelier.jpg" alt="Pastorales" class="img-fluid w-100 mb-3">
-    </div>
-    <div class="row">
-      <!-- Location -->
-      <div class="col-md-6 mb-4 mb-md-0">
-        <h5 class="fw-bold text-uppercase mb-3">Location</h5>
-        <p class="mb-2">
-          Studio located in France, <br>
-          Rue de Sauvinargues 44,<br>
-          city name
-        </p>
-      </div>
-       <!-- Contact Info -->
-      <div class="col-md-6 text-end">
-        <h5 class="fw-bold text-uppercase mb-3">Contact</h5>
-        <p class="mb-2"><a href="mailto:studio@example.com" class="contact-link">email@example.com</a></p>
-        <p class="mb-2"><a href="https://www.instagram.com/guyvanoers/" class="contact-link" target="_blank">@guyvanoers</a></p>
-      </div>
-    </div>
-    <!-- Footer -->
-    <footer class="footer-bar">
-        <div class="container-fluid px-4 px-lg-5">
-        <div class="d-flex justify-content-between align-items-center flex-wrap small">
-        <div>© Guy Van Oers</div>
-        <div><a href="https://www.instagram.com/guyvanoers/" target="_blank" class="footer-link">@guyvanoers</a></div>
-        <div><a href="mailto:email@example.com" class="footer-link">email@example.com</a></div>
-        </div>
-        </div>
-    </footer>
-  </div>
 
+<!-- Contact Content -->
+<div class="container-asym py-5">
+  <div class="row">
+    <!-- Location -->
+    <div class="col-md-6 mb-4 mb-md-0">
+      <h5 class="fw-bold text-uppercase mb-3">Location /</h5>
+      <p class="mb-2">
+        Studio located in France,<br>
+        Rue de Savinargues 44,<br>
+        Canaules
+      </p>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="col-md-6 text-md-end">
+      <h5 class="fw-bold text-uppercase mb-3">Contact /</h5>
+      <p class="mb-2"><a href="mailto:email@example.com" class="contact-link">email@example.com</a></p>
+      <p class="mb-2"><a href="https://www.instagram.com/guyvanoers/" class="contact-link" target="_blank">@guyvanoers</a></p>
+    </div>
+  </div>
 </div>
+
+<!-- Full-width Image -->
+<div class="container-asym my-5">
+  <img src="assets/atelier.jpg" alt="Atelier" class="img-fluid w-100">
+</div>
+
+<!-- Footer -->
+<footer class="footer-bar py-4 border-top">
+  <div class="container-asym d-flex justify-content-between align-items-center flex-wrap small">
+    <div>© Guy Van Oers</div>
+    <div><a href="https://www.instagram.com/guyvanoers/" target="_blank" class="footer-link">@guyvanoers</a></div>
+    <div><a href="mailto:email@example.com" class="footer-link">email@example.com</a></div>
+  </div>
+</footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
