--- a/index.html
+++ b/index.html
@@ -35,18 +35,26 @@
 
 <!-- About Section -->
 <div class="about-section container-asym mb-5">
-  <h3 class="about-title">About /</h3>
-  <p class="about-text">
-    Guy Van Oers is a self-taught artist whose abstract paintings are driven by emotion and intuition. 
-    Working mainly with acrylic on canvas, he creates dynamic compositions full of movement, texture, 
-    and layered color. His work explores themes like motion, disruption, and reduced reality—inviting 
-    viewers to feel rather than interpret.
-  </p>
+  <div class="row align-items-center">
+    <div class="col-md-6">
+      <h3 class="about-title">ABOUT /</h3>
+      <p class="about-text">
+        Guy Van Oers is a self-taught artist whose abstract paintings are driven by emotion and intuition. 
+        Working mainly with acrylic on canvas, he creates dynamic compositions full of movement, texture, 
+        and layered color. His work explores themes like motion, disruption, and reduced reality—inviting 
+        viewers to feel rather than interpret.
+      </p>
+    </div>
+    <div class="col-md-6 text-center">
+      <img src="assets/guy.jpg" alt="Guy Van Oers portret" class="img-fluid shadow-sm" style="max-width: 100%; height: auto;">
+    </div>
+  </div>
 </div>
 
 <!-- Gallery Section -->
 <div class="container gallery-container container-asym mb-5">
   <div class="row g-3">
+    <h3 class="about-title">PAINTINGS /</h3>
     <div class="col-md-4">
       <a href="detail_1.html"><img src="assets/artwork_1.jpg" class="img-fluid" alt="Artwork 1"></a>
       <a href="detail_1.html"><img src="assets/artwork_3.jpg" class="img-fluid mt-3" alt="Artwork 2"></a>
