--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
       <h5 class="fw-bold text-uppercase mb-3">Location /</h5>
       <p class="mb-2">
         Studio located in France,<br>
-        Rue de Savinargues 44,<br>
-        Canaules
+        44 Rue de Savinargues,<br>
+        30350 Canaules et Argentières, Gard 
       </p>
     </div>
 
