--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
     <div class="col-md-6">
       <h3 class="about-title">ABOUT /</h3>
       <p class="about-text">
-        Guy Van Oers is a self-taught artist whose abstract paintings are driven by emotion and intuition. 
-        Working mainly with acrylic on canvas, he creates dynamic compositions full of movement, texture, 
-        and layered color. His work explores themes like motion, disruption, and reduced reality—inviting 
-        viewers to feel rather than interpret.
+        Guy Van Oers – An Artist of Many Lives
+        Born in Belgium in 1959, Guy Van Oers first stepped into the creative world through music, 
+        photography, and poetry before turning to painting. A self-taught artist, he paints in the spirit of lyrical abstraction, 
+        guided by raw emotion.
+
+        His recent works reflect both the turbulence of our times — with fierce reds, deep blacks, and explosive strokes — 
+        and a more hopeful, poetic side in calming blues and luminous yellows. Each canvas is an exploration of feeling, 
+        a balance between unrest and optimism.
       </p>
     </div>
     <div class="col-md-6 text-center">
@@ -50,14 +54,29 @@
     </div>
   </div>
 </div>
-
+<!-- Exhibitions Section -->
+<div class="exhibitions-section container-asym mb-5">
+  <div class="row">
+    <div class="col-12">
+      <h3 class="about-title">EXHIBITIONS /</h3>
+      <ul class="list-unstyled">
+        <li><strong>OCTOBRE 2025</strong> Les artistes de la Nièvre, Lormes</li>
+        <li><strong>DECEMBRE 2025</strong> Galerie Verbeeck - Van Dyck, Anvers (Belgique)</li>
+      </ul>
+    </div>
+  </div>
+</div>
 <!-- Gallery Section -->
 <div class="container gallery-container container-asym mb-5">
   <div class="row g-3">
     <h3 class="about-title">PAINTINGS /</h3>
     <div class="col-md-4">
-      <a href="detail_1.html"><img src="assets/artwork_1.jpg" class="img-fluid" alt="Artwork 1"></a>
-      <a href="detail_1.html"><img src="assets/artwork_3.jpg" class="img-fluid mt-3" alt="Artwork 2"></a>
+      <a href="detail_1.html"><img src="assets/artwork_1.jpg" class="img-fluid" alt="Artwork 1">  
+        <!-- <span class="linkProject text-dark footer-link">Bekijk project</span>-->
+      </a>
+      <a href="detail_1.html"><img src="assets/artwork_3.jpg" class="img-fluid mt-3" alt="Artwork 2">
+       <!-- <span class="linkProject text-dark footer-link">Bekijk project</span>-->
+      </a>
     </div>
     <div class="col-md-4">
       <a href="detail_1.html"><img src="assets/artwork_3.jpg" class="img-fluid" alt="Artwork 3"></a>
