--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     <!-- Contact Info -->
     <div class="col-md-6 text-md-end">
       <h5 class="fw-bold text-uppercase mb-3">Contact /</h5>
-      <p class="mb-2"><a href="mailto:email@example.com" class="contact-link">email@example.com</a></p>
+      <p class="mb-2"><a href="mailto:guyvanoers@skynet.be" class="contact-link">guyvanoers@skynet.be</a></p>
       <p class="mb-2"><a href="https://www.instagram.com/guyvanoers/" class="contact-link" target="_blank">@guyvanoers</a></p>
     </div>
   </div>
@@ -49,7 +49,7 @@
   <div class="container-asym d-flex justify-content-between align-items-center flex-wrap small">
     <div>© Guy Van Oers</div>
     <div><a href="https://www.instagram.com/guyvanoers/" target="_blank" class="footer-link">@guyvanoers</a></div>
-    <div><a href="mailto:email@example.com" class="footer-link">email@example.com</a></div>
+    <div><a href="mailto:guyvanoers@skynet.be" class="footer-link">guyvanoers@skynet.be</a></div>
   </div>
 </footer>
 
