--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Guy Van Oers – Portfolio</title>
+  <meta name="description" content="Official portfolio of Belgian artist Guy Van Oers. Discover his lyrical abstract paintings, exhibitions and artistic journey.">
+  <meta name="keywords" content="Guy Van Oers, Belgian artist, abstract art, lyrical abstraction, contemporary paintings, exhibitions">
+  <meta name="author" content="Guy Van Oers">
+  <title>Guy Van Oers – Belgian Abstract Artist</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
+  
+  <!--facebook share-->
+  <meta property="og:title" content="Guy Van Oers – Belgian Abstract Artist">
+  <meta property="og:description" content="Explore the lyrical abstract paintings of Guy Van Oers. View his portfolio and exhibitions.">
+  <meta property="og:image" content="https://sarahvanoers.github.io/html-portfolio/assets/facebookShare.jpg">
+  <meta property="og:url" content="https://sarahvanoers.github.io/html-portfolio/">
+  <meta property="og:type" content="website">
+  <!---->
 </head>
 <body>
 
@@ -21,7 +32,7 @@
 <div class="container-asym hero-section py-5">
   <div class="row">
     <div class="col-12">
-      <img src="assets/artwork_1.jpg" alt="Pastorales" class="img-fluid w-100 mb-3">
+      <img src="assets/G1_detail.jpg" alt="Pastorales" class="img-fluid w-100 mb-3">
     </div>
     <div class="row">
       <div class="col-lg-6 offset-lg-6 text-end">
@@ -60,8 +71,8 @@
     <div class="col-12">
       <h3 class="about-title">EXHIBITIONS /</h3>
       <ul class="list-unstyled">
-        <li><strong>OCTOBRE 2025</strong> Les artistes de la Nièvre, Lormes</li>
-        <li><strong>DECEMBRE 2025</strong> Galerie Verbeeck - Van Dyck, Anvers (Belgique)</li>
+        <li><strong>Octobre 2025</strong> Les artistes de la Nièvre, Lormes</li>
+        <li><strong>Decembre 2025</strong> Galerie Verbeeck - Van Dyck, Anvers (Belgique)</li>
       </ul>
     </div>
   </div>
@@ -70,22 +81,89 @@
 <div class="container gallery-container container-asym mb-5">
   <div class="row g-3">
     <h3 class="about-title">PAINTINGS /</h3>
-    <div class="col-md-4">
-      <a href="detail_1.html"><img src="assets/artwork_1.jpg" class="img-fluid" alt="Artwork 1">  
-        <!-- <span class="linkProject text-dark footer-link">Bekijk project</span>-->
+
+    <!-- Painting loop -->
+    <div class="col-md-4 text-center">
+      <a href="detail.html?id=G1" class="text-decoration-none text-dark d-block mb-3">
+        <img src="assets/G1_A_800.jpg" class="img-fluid" alt="Painting G1 by Guy Van Oers">
+        <div class="mt-2"><span>Untitled, 2023 →</span></div>
       </a>
-      <a href="detail_1.html"><img src="assets/artwork_3.jpg" class="img-fluid mt-3" alt="Artwork 2">
-       <!-- <span class="linkProject text-dark footer-link">Bekijk project</span>-->
+    </div>
+
+    <div class="col-md-4 text-center">
+      <a href="detail.html?id=G2" class="text-decoration-none text-dark d-block mb-3">
+        <img src="assets/G2_A_800.jpg" class="img-fluid" alt="Painting G2 by Guy Van Oers">
+        <div class="mt-2"><span>Untitled, 2023 →</span></div>
       </a>
     </div>
-    <div class="col-md-4">
-      <a href="detail_1.html"><img src="assets/artwork_3.jpg" class="img-fluid" alt="Artwork 3"></a>
-      <a href="detail_1.html"><img src="assets/artwork_2.jpg" class="img-fluid mt-3" alt="Artwork 4"></a>
+
+    <div class="col-md-4 text-center">
+      <a href="detail.html?id=G3" class="text-decoration-none text-dark d-block mb-3">
+        <img src="assets/G3_A_800.jpg" class="img-fluid" alt="Painting G3 by Guy Van Oers">
+        <div class="mt-2"><span>Untitled, 2023 →</span></div>
+      </a>
     </div>
-     <div class="col-md-4">
-      <a href="detail_1.html"><img src="assets/artwork_1.jpg" class="img-fluid" alt="Artwork 3"></a>
-      <a href="detail_1.html"><img src="assets/artwork_2.jpg" class="img-fluid mt-3" alt="Artwork 4"></a>
+
+    <div class="col-md-4 text-center">
+      <a href="detail.html?id=G4" class="text-decoration-none text-dark d-block mb-3">
+        <img src="assets/G4_A_800.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+        <div class="mt-2"><span>Untitled, 2023 →</span></div>
+      </a>
     </div>
+
+    <!-- herhaal dit patroon tot G30 -->
+    <!-- ik heb ze hieronder volledig uitgeschreven -->
+
+    <div class="col-md-4 text-center">
+      <a href="detail.html?id=G5" class="text-decoration-none text-dark d-block mb-3">
+        <img src="assets/G5_A_800.jpg" class="img-fluid" alt="Painting G5 by Guy Van Oers">
+        <div class="mt-2"><span>Untitled, 2023 →</span></div>
+      </a>
+    </div>
+
+    <div class="col-md-4 text-center">
+      <a href="detail.html?id=G6" class="text-decoration-none text-dark d-block mb-3">
+        <img src="assets/G6_A_800.jpg" class="img-fluid" alt="Painting G6 by Guy Van Oers">
+        <div class="mt-2"><span>Untitled, 2023 →</span></div>
+      </a>
+    </div>
+
+    <div class="col-md-4 text-center">
+      <a href="detail.html?id=G7" class="text-decoration-none text-dark d-block mb-3">
+        <img src="assets/G7_A_800.jpg" class="img-fluid" alt="Painting G7 by Guy Van Oers">
+        <div class="mt-2"><span>Untitled, 2023 →</span></div>
+      </a>
+    </div>
+
+    <div class="col-md-4 text-center">
+      <a href="detail.html?id=G8" class="text-decoration-none text-dark d-block mb-3">
+        <img src="assets/G8_A_800.jpg" class="img-fluid" alt="Painting G8 by Guy Van Oers">
+        <div class="mt-2"><span>Untitled, 2023 →</span></div>
+      </a>
+    </div>
+
+    <div class="col-md-4 text-center">
+      <a href="detail.html?id=G9" class="text-decoration-none text-dark d-block mb-3">
+        <img src="assets/G9_A_800.jpg" class="img-fluid" alt="Painting G9 by Guy Van Oers">
+        <div class="mt-2"><span>Untitled, 2023 →</span></div>
+      </a>
+    </div>
+
+    <div class="col-md-4 text-center">
+      <a href="detail.html?id=G10" class="text-decoration-none text-dark d-block mb-3">
+        <img src="assets/G10_A_800.jpg" class="img-fluid" alt="Painting G10 by Guy Van Oers">
+        <div class="mt-2"><span>Untitled, 2023 →</span></div>
+      </a>
+    </div>
+    <!-- ... herhalen voor G11 t.e.m. G30 -->
+
+    <div class="col-md-4 text-center">
+      <a href="detail.html?id=G30" class="text-decoration-none text-dark d-block mb-3">
+        <img src="assets/G30_A_800.jpg" class="img-fluid" alt="Painting G30 by Guy Van Oers">
+        <div class="mt-2"><span>Untitled, 2023 →</span></div>
+      </a>
+    </div>
+    <!-- End loop -->
   </div>
 </div>
 
@@ -94,7 +172,7 @@
   <div class="container d-flex justify-content-between align-items-center flex-wrap small">
     <div>© Guy Van Oers</div>
     <div><a href="https://www.instagram.com/guyvanoers/" target="_blank" class="footer-link">@guyvanoers</a></div>
-    <div><a href="mailto:email@example.com" class="footer-link">email@example.com</a></div>
+    <div><a href="mailto:guyvanoers@skynet.be" class="footer-link">guyvanoers@skynet.be</a></div>
   </div>
 </footer>
 
