--- a/detail.html
+++ b/detail.html
@@ -48,7 +48,7 @@
   </div>
 </footer>
 
-<script src="data.js"></script>
+<script src="/js/data.js"></script>
 <script>
   // Haal ID uit de URL (bv. detail.html?id=G1)
   const params = new URLSearchParams(window.location.search);
