--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
   <title>Guy Van Oers – Belgian Abstract Artist</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
-  
+  <script src="js/data.js"></script>
   <!--facebook share-->
   <meta property="og:title" content="Guy Van Oers – Belgian Abstract Artist">
   <meta property="og:description" content="Explore the lyrical abstract paintings of Guy Van Oers. View his portfolio and exhibitions.">
   <meta property="og:image" content="https://sarahvanoers.github.io/html-portfolio/assets/facebookShare.jpg">
   <meta property="og:url" content="https://sarahvanoers.github.io/html-portfolio/">
   <meta property="og:type" content="website">
-  <!---->
 </head>
 <body>
 
@@ -29,12 +28,12 @@
 </header>
 
 <!-- Hero Section -->
-<div class="container-asym hero-section py-5">
-  <div class="row">
-    <div class="col-12">
-      <img src="assets/G1_detail.jpg" alt="Pastorales" class="img-fluid w-100 mb-3">
-    </div>
+<div class="hero-section py-5">
+  <div class="container-asym">
     <div class="row">
+      <div class="col-12">
+        <img src="assets/G1_detail.jpg" alt="Pastorales" class="img-fluid w-100 mb-3">
+      </div>
       <div class="col-lg-6 offset-lg-6 text-end">
         <h2 class="hero-title">Disturbed Movement, 2023</h2>
         <p class="hero-subtext">Acrylic on canvas - Signed and dated on the back</p>
@@ -45,131 +44,101 @@
 </div>
 
 <!-- About Section -->
-<div class="about-section container-asym mb-5">
-  <div class="row align-items-center">
-    <div class="col-md-6">
-      <h3 class="about-title">ABOUT /</h3>
-      <p class="about-text">
-        Guy Van Oers – An Artist of Many Lives
-        Born in Belgium in 1959, Guy Van Oers first stepped into the creative world through music, 
-        photography, and poetry before turning to painting. A self-taught artist, he paints in the spirit of lyrical abstraction, 
-        guided by raw emotion.
+<div class="about-section mb-5">
+  <div class="container-asym">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <h3 class="about-title">ABOUT /</h3>
+        <p class="about-text">
+          Guy Van Oers – An Artist of Many Lives
+          Born in Belgium in 1959, Guy Van Oers first stepped into the creative world through music, 
+          photography, and poetry before turning to painting. A self-taught artist, he paints in the spirit of lyrical abstraction, 
+          guided by raw emotion.
 
-        His recent works reflect both the turbulence of our times — with fierce reds, deep blacks, and explosive strokes — 
-        and a more hopeful, poetic side in calming blues and luminous yellows. Each canvas is an exploration of feeling, 
-        a balance between unrest and optimism.
-      </p>
-    </div>
-    <div class="col-md-6 text-center">
-      <img src="assets/guy.jpg" alt="Guy Van Oers portret" class="img-fluid shadow-sm" style="max-width: 100%; height: auto;">
+          His recent works reflect both the turbulence of our times — with fierce reds, deep blacks, and explosive strokes — 
+          and a more hopeful, poetic side in calming blues and luminous yellows. Each canvas is an exploration of feeling, 
+          a balance between unrest and optimism.
+        </p>
+      </div>
+      <div class="col-md-6 text-center">
+        <img src="assets/guy.jpg" alt="Guy Van Oers portret" class="img-fluid shadow-sm" style="max-width: 100%; height: auto;">
+      </div>
     </div>
   </div>
 </div>
+
 <!-- Exhibitions Section -->
-<div class="exhibitions-section container-asym mb-5">
-  <div class="row">
-    <div class="col-12">
-      <h3 class="about-title">EXHIBITIONS /</h3>
-      <ul class="list-unstyled">
-        <li><strong>Octobre 2025</strong> Les artistes de la Nièvre, Lormes</li>
-        <li><strong>Decembre 2025</strong> Galerie Verbeeck - Van Dyck, Anvers (Belgique)</li>
-      </ul>
+<div class="exhibitions-section mb-5">
+  <div class="container-asym">
+    <div class="row">
+      <div class="col-12">
+        <h3 class="about-title">EXHIBITIONS /</h3>
+        <ul class="list-unstyled">
+          <li><strong>Octobre 2025</strong> Les artistes de la Nièvre, Lormes</li>
+          <li><strong>Decembre 2025</strong> Galerie Verbeeck - Van Dyck, Anvers (Belgique)</li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
+
 <!-- Gallery Section -->
-<div class="container gallery-container container-asym mb-5">
-  <div class="row g-3">
-    <h3 class="about-title">PAINTINGS /</h3>
+<div class="gallery-container mb-5">
+  <div class="container-asym">
+    <div class="row g-3">
+      <h3 class="about-title">PAINTINGS /</h3>
 
-    <!-- Painting loop -->
-    <div class="col-md-4 text-center">
-      <a href="detail.html?id=G1" class="text-decoration-none text-dark d-block mb-3">
-        <img src="assets/G1_A_800.jpg" class="img-fluid" alt="Painting G1 by Guy Van Oers">
-        <div class="mt-2"><span>Untitled, 2023 →</span></div>
-      </a>
+      <!-- Painting loop -->
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G2" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G2.jpg" class="img-fluid" alt="Painting G2 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G3" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G3.jpg" class="img-fluid" alt="Painting G3 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G4" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G4.jpg" class="img-fluid" alt="Painting G1 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G5" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G5.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+
+
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G6" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G6.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+
+      <!-- herhaal dit patroon tot G30 -->
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G30" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G30_A_800.jpg" class="img-fluid" alt="Painting G30 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
     </div>
-
-    <div class="col-md-4 text-center">
-      <a href="detail.html?id=G2" class="text-decoration-none text-dark d-block mb-3">
-        <img src="assets/G2_A_800.jpg" class="img-fluid" alt="Painting G2 by Guy Van Oers">
-        <div class="mt-2"><span>Untitled, 2023 →</span></div>
-      </a>
-    </div>
-
-    <div class="col-md-4 text-center">
-      <a href="detail.html?id=G3" class="text-decoration-none text-dark d-block mb-3">
-        <img src="assets/G3_A_800.jpg" class="img-fluid" alt="Painting G3 by Guy Van Oers">
-        <div class="mt-2"><span>Untitled, 2023 →</span></div>
-      </a>
-    </div>
-
-    <div class="col-md-4 text-center">
-      <a href="detail.html?id=G4" class="text-decoration-none text-dark d-block mb-3">
-        <img src="assets/G4_A_800.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
-        <div class="mt-2"><span>Untitled, 2023 →</span></div>
-      </a>
-    </div>
-
-    <!-- herhaal dit patroon tot G30 -->
-    <!-- ik heb ze hieronder volledig uitgeschreven -->
-
-    <div class="col-md-4 text-center">
-      <a href="detail.html?id=G5" class="text-decoration-none text-dark d-block mb-3">
-        <img src="assets/G5_A_800.jpg" class="img-fluid" alt="Painting G5 by Guy Van Oers">
-        <div class="mt-2"><span>Untitled, 2023 →</span></div>
-      </a>
-    </div>
-
-    <div class="col-md-4 text-center">
-      <a href="detail.html?id=G6" class="text-decoration-none text-dark d-block mb-3">
-        <img src="assets/G6_A_800.jpg" class="img-fluid" alt="Painting G6 by Guy Van Oers">
-        <div class="mt-2"><span>Untitled, 2023 →</span></div>
-      </a>
-    </div>
-
-    <div class="col-md-4 text-center">
-      <a href="detail.html?id=G7" class="text-decoration-none text-dark d-block mb-3">
-        <img src="assets/G7_A_800.jpg" class="img-fluid" alt="Painting G7 by Guy Van Oers">
-        <div class="mt-2"><span>Untitled, 2023 →</span></div>
-      </a>
-    </div>
-
-    <div class="col-md-4 text-center">
-      <a href="detail.html?id=G8" class="text-decoration-none text-dark d-block mb-3">
-        <img src="assets/G8_A_800.jpg" class="img-fluid" alt="Painting G8 by Guy Van Oers">
-        <div class="mt-2"><span>Untitled, 2023 →</span></div>
-      </a>
-    </div>
-
-    <div class="col-md-4 text-center">
-      <a href="detail.html?id=G9" class="text-decoration-none text-dark d-block mb-3">
-        <img src="assets/G9_A_800.jpg" class="img-fluid" alt="Painting G9 by Guy Van Oers">
-        <div class="mt-2"><span>Untitled, 2023 →</span></div>
-      </a>
-    </div>
-
-    <div class="col-md-4 text-center">
-      <a href="detail.html?id=G10" class="text-decoration-none text-dark d-block mb-3">
-        <img src="assets/G10_A_800.jpg" class="img-fluid" alt="Painting G10 by Guy Van Oers">
-        <div class="mt-2"><span>Untitled, 2023 →</span></div>
-      </a>
-    </div>
-    <!-- ... herhalen voor G11 t.e.m. G30 -->
-
-    <div class="col-md-4 text-center">
-      <a href="detail.html?id=G30" class="text-decoration-none text-dark d-block mb-3">
-        <img src="assets/G30_A_800.jpg" class="img-fluid" alt="Painting G30 by Guy Van Oers">
-        <div class="mt-2"><span>Untitled, 2023 →</span></div>
-      </a>
-    </div>
-    <!-- End loop -->
   </div>
 </div>
 
 <!-- Footer -->
 <footer class="footer-bar py-4 border-top">
-  <div class="container d-flex justify-content-between align-items-center flex-wrap small">
+  <div class="container-asym d-flex justify-content-between align-items-center flex-wrap small">
     <div>© Guy Van Oers</div>
     <div><a href="https://www.instagram.com/guyvanoers/" target="_blank" class="footer-link">@guyvanoers</a></div>
     <div><a href="mailto:guyvanoers@skynet.be" class="footer-link">guyvanoers@skynet.be</a></div>
