--- a/index.html
+++ b/index.html
@@ -125,10 +125,153 @@
         </a>
       </div>
 
-      <!-- herhaal dit patroon tot G30 -->
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G7" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G7.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G8" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G8.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+
+
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G9" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G9.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G10" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G10.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+      <!-- G10 -->
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G11" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G11.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+     <div class="col-md-4 text-center">
+        <a href="detail.html?id=G12" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G12.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>   
+     <div class="col-md-4 text-center">
+        <a href="detail.html?id=G13" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G13.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>  
+     <div class="col-md-4 text-center">
+        <a href="detail.html?id=G14" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G14.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div> 
+     <div class="col-md-4 text-center">
+        <a href="detail.html?id=G15" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G15.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+     <div class="col-md-4 text-center">
+        <a href="detail.html?id=G16" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G16.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+     <div class="col-md-4 text-center">
+        <a href="detail.html?id=G17" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G17.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+     <div class="col-md-4 text-center">
+        <a href="detail.html?id=G18" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G18.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+     <div class="col-md-4 text-center">
+        <a href="detail.html?id=G19" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G19.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+     <div class="col-md-4 text-center">
+        <a href="detail.html?id=G20" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G20.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+      <!-- G20 -->
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G21" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G21.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G22" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G22.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G23" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G23.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G24" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G24.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G25" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G25.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G26" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G26.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G27" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G27.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G28" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G28.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="detail.html?id=G29" class="text-decoration-none text-dark d-block mb-3">
+          <img src="assets/G29.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
+          <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
+        </a>
+      </div>
       <div class="col-md-4 text-center">
         <a href="detail.html?id=G30" class="text-decoration-none text-dark d-block mb-3">
-          <img src="assets/G30_A_800.jpg" class="img-fluid" alt="Painting G30 by Guy Van Oers">
+          <img src="assets/G30.jpg" class="img-fluid" alt="Painting G4 by Guy Van Oers">
           <div class="mt-2 text-end"><span>Untitled, 2023 →</span></div>
         </a>
       </div>
