--- a/detail.html
+++ b/detail.html
@@ -6,6 +6,21 @@
   <title id="page-title">Artwork – Guy Van Oers</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    .painting-detail,
+    .painting-info {
+      max-width: 700px;    /* breedte instellen voor foto + tekst */
+      margin: 0 auto;      /* centreren */
+    }
+    .painting-detail {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    .painting-info {
+      text-align: right;   /* tekst rechts uitlijnen */
+    }
+  </style>
 </head>
 <body>
 
@@ -20,21 +35,26 @@
 <!-- Artwork Section -->
 <div class="container-asym py-5">
   <div class="row">
-    <div class="col-12 mb-4">
-      <img id="painting-image" src="" alt="" class="img-fluid w-100">
+    <!-- Afbeelding -->
+    <div class="col-12 mb-4 text-center">
+      <img id="painting-image" src="" alt="" class="img-fluid painting-detail">
     </div>
 
-    <div class="col-lg-6 offset-lg-6 text-end artwork-info">
-      <h2 id="painting-title" class="hero-title"></h2>
-      <p id="painting-medium" class="hero-subtext"></p>
-      <p id="painting-size" class="hero-subtext"></p>
-      <p id="painting-year" class="hero-subtext"></p>
+    <!-- Info -->
+    <div class="col-12 artwork-info text-end">
+      <div class="painting-info">
+        <h2 id="painting-title" class="hero-title"></h2>
+        <p id="painting-medium" class="hero-subtext"></p>
+        <p id="painting-size" class="hero-subtext"></p>
+        <p id="painting-year" class="hero-subtext"></p>
+      </div>
     </div>
 
-    <div class="about-section container-asym mb-5">
-      <p id="painting-description">
-        <!-- Extra beschrijving komt hier uit data.js -->
-      </p>
+    <!-- Beschrijving -->
+    <div class="col-12 about-section mb-5">
+      <div class="painting-info">
+        <p id="painting-description"></p>
+      </div>
     </div>
   </div>
 </div>
