--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
 <!-- Full-width Image -->
 <div class="container-asym my-5">
-  <img src="assets/atelier.jpg" alt="Atelier" class="img-fluid w-100">
+  <img src="assets/guy-1.jpg" alt="Atelier" class="img-fluid w-100">
 </div>
 
 <!-- Footer -->
